[gd_scene load_steps=5 format=3 uid="uid://djw6l22i0d5b2"]

[ext_resource type="Script" path="res://src/events/event_report.gd" id="1_ofno7"]
[ext_resource type="FontFile" uid="uid://817qgoiy1gah" path="res://assets/resources/font/PixelOperator.ttf" id="1_qnw2m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ia855"]
bg_color = Color(0.435294, 0.552941, 0.270588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xyrsv"]
bg_color = Color(0.635155, 0.497815, 0.235003, 1)

[node name="EventReport" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -825.0
offset_bottom = -316.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ofno7")

[node name="HSeparator3" type="HSeparator" parent="."]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Cur_speaker" type="RichTextLabel" parent="."]
layout_mode = 2
theme_override_colors/default_color = Color(0.541176, 0.745098, 0.247059, 1)
theme_override_fonts/normal_font = ExtResource("1_qnw2m")
theme_override_font_sizes/normal_font_size = 25
text = "Officer Kessler"
fit_content = true

[node name="time_tree" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="time_tree"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Countdown" type="Label" parent="time_tree"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_qnw2m")
theme_override_font_sizes/font_size = 25
text = "Time Remaining: 0:00:0"

[node name="HSeparator4" type="HSeparator" parent="."]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Cur_text" type="RichTextLabel" parent="."]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_qnw2m")
theme_override_font_sizes/normal_font_size = 25
text = "Chief, we have detected a collision between two satellites in low Earth orbit. Debris is minimal, but it may pose a potential risk to our active communication satellites."
fit_content = true

[node name="HSeparator" type="HSeparator" parent="."]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="choice_tree" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Choice1" type="Button" parent="choice_tree"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ia855")
text = "Choice 1"
alignment = 0
autowrap_mode = 3

[node name="Choice2" type="Button" parent="choice_tree"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_xyrsv")
text = "Choice 2"
alignment = 0

[node name="HSeparator4" type="HSeparator" parent="choice_tree"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[connection signal="mouse_entered" from="choice_tree/Choice1" to="." method="_on_choice_1_mouse_entered"]
[connection signal="mouse_exited" from="choice_tree/Choice1" to="." method="_on_choice_1_mouse_exited"]
[connection signal="pressed" from="choice_tree/Choice1" to="." method="_on_choice_1_pressed"]
[connection signal="mouse_entered" from="choice_tree/Choice2" to="." method="_on_choice_2_mouse_entered"]
[connection signal="mouse_exited" from="choice_tree/Choice2" to="." method="_on_choice_2_mouse_exited"]
[connection signal="pressed" from="choice_tree/Choice2" to="." method="_on_choice_2_pressed"]
